# mst-bot

./: Cargo.toml
migrations/: 20240806045748_initial_migration.sql  20240807025940_initial_migration.sql  20240824043916_initial_migration.sql  20241009011701_add_guild_id.sql  20241009013125_guild_id_to_string.sql
src/: README.md  main.rs
src/commands/: cancel.rs  estimate.rs  meetup.rs  mod.rs  mst.rs  ping.rs
